finish step 1 -7